--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load blog_extras %}
+
 {% block content %}
   <nav class="navbar navbar-expand-sm navbar-light bg-light">
     <div class="container-fluid">
@@ -33,6 +35,8 @@
 <button type="button" class="btn btn-primary">Primary</button>
 <a href="#" class="btn btn-secondary">Secondary</a>
 <button type="button" class="btn btn-danger">Danger</button>
+
+
 <div class="dropdown">
  <button class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton1" type="button" data-bs-toggle="dropdown" aria-expanded="false"> Bootsrap dropdown </button>
  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1"> 
@@ -83,4 +87,20 @@
     <div class="col-xs-12 col-sm-2 col-md-2 bg-danger">Column 2</div>
     <div class="col bg-success">Column 3</div>
 </div>
+
+<h2> Blog Posts </h2>
+{% for post in posts %}
+  <div class="row">
+    <div vlass="col">
+      <h3> {{post.title}} </h3>
+      <small> By {{post.author|author_details:request.user }} on {{ post.published_at|date:"M, d Y" }} </small>
+      <p> {{ post.summary }} </p>
+      <p> 
+        ({{ post.content|wordcount }}) words 
+        <a href="#"> Read More </a>
+      </p>
+    </div>
+  </div>
+{% endfor %}
 {% endblock %}
+
