--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,6 +1,4 @@
 {% extends "base.html" %}
-{% load blog_extras %}
-
 {% block content %}
   <nav class="navbar navbar-expand-sm navbar-light bg-light">
     <div class="container-fluid">
@@ -93,11 +91,11 @@
   <div class="row">
     <div vlass="col">
       <h3> {{post.title}} </h3>
-      <small> By {{post.author|author_details:request.user }} on {{ post.published_at|date:"M, d Y" }} </small>
+      {% include "blog/post-byline.html" %}
       <p> {{ post.summary }} </p>
       <p> 
         ({{ post.content|wordcount }}) words 
-        <a href="#"> Read More </a>
+        <a href="{% url 'blog:blog-post-detail' post.slug %}"> Read More </a>
       </p>
     </div>
   </div>
