--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -12,6 +12,9 @@
         {{ post.content }}
     {% endcol %}
 {% endrow %}
+
+{% include "blog/post-comments.html" %}
+
 {% row %}
     {% col %}
         {% recent_posts post %}
