Finish django registration

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-  <nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <!-- <nav class="navbar navbar-expand-sm navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -19,7 +19,7 @@
             </ul>
         </div>
     </div>
-</nav>
+</nav> -->
 <!-- <div class="alert alert-success" role="alert">
   A simple success alert—check it out!
 </div>
@@ -29,13 +29,13 @@
 <div class="alert alert-warning" role="alert">
   A simple warning alert—check it out!
 </div> -->
-
+<!-- 
 <button type="button" class="btn btn-primary">Primary</button>
 <a href="#" class="btn btn-secondary">Secondary</a>
-<button type="button" class="btn btn-danger">Danger</button>
+<button type="button" class="btn btn-danger">Danger</button> -->
 
 
-<div class="dropdown">
+<!-- <div class="dropdown">
  <button class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton1" type="button" data-bs-toggle="dropdown" aria-expanded="false"> Bootsrap dropdown </button>
  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1"> 
 <li><a class="dropdown-item"> Item1 </a></li>
@@ -44,9 +44,9 @@
 
  </ul>
 
-</div>
+</div> -->
 
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#example-modal">
+<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#example-modal">
   Open Modal
 </button>
 
@@ -84,7 +84,7 @@
     <div class="col-xs-12 col-sm-10 col-md-6 bg-primary">Column 1</div>
     <div class="col-xs-12 col-sm-2 col-md-2 bg-danger">Column 2</div>
     <div class="col bg-success">Column 3</div>
-</div>
+</div> -->
 
 <h2> Blog Posts </h2>
 {% for post in posts %}
